--- a/src/components/ReviewForm/ReviewForm.module.css
+++ b/src/components/ReviewForm/ReviewForm.module.css
@@ -123,7 +123,7 @@
   }
 
   .poster {
-    position: static;
+    position: relative;
     max-width: clamp(120px, 40vw, 170px);
     margin-inline: auto;
   }
